Issue #000 fix: Card badge avatar alignment issue

--- a/src/app/client/src/app/modules/shared/components/card/card.component.scss
+++ b/src/app/client/src/app/modules/shared/components/card/card.component.scss
@@ -42,6 +42,7 @@
         justify-content: flex-end;
         height: 92px;
         overflow: hidden;
+        width: calc(100% - 70px);
     }
     .avatar{
         height: 31px;
